welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value num
	for(i <- 1 to num.length - 1)
                      ^